[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://MapSwitch.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[node name="MapSwitch" groups=[
"MapSwitch",
] instance=ExtResource( 1 )]
script = ExtResource( 2 )
map = null

[node name="InteractionArrow" parent="." index="1"]
visible = false
use_press_e_sprite = true

[node name="Area2D" type="Area2D" parent="." index="2"]
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )
_sections_unfolded = [ "shape" ]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
